Changed hbs syntax in index.hbs
+There was an error and it was rendering content as html when we need it to be just as text

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -339,7 +339,7 @@
                 <span class="custom-author font-white">{{emitions.[4].date}}</span>
 
                 <a href="/contents/emitions/{{emitions.[4].url}}">
-                    <h3 class="custom-small-title font-crimson">{{{emitions.[4].program}}}</h3>
+                    <h3 class="custom-small-title font-crimson">{{emitions.[4].program}}</h3>
                 </a>
                 <span class="custom-headline font-white clamp">{{{emitions.[4].description}}}</span>
             </div>
