--- a/src/views/partials/profile_add_column.hbs
+++ b/src/views/partials/profile_add_column.hbs
@@ -130,8 +130,39 @@
                             });
                         }
                     }
+                } else if (response.status === 998) {
+                    console.log(typeof (response.status));
+                    var error_m = document.createElement('div');
+                    error_m.classList.add('error_div');
+                    var error_p = document.createTextNode('Recuerda que el Link debe ser del tipo "https://www.youtube.com/watch?v=xxxxxxx"');
+                    error_m.appendChild(error_p);
+                    document.body.appendChild(error_m);
+                    const x = document.querySelectorAll(".error_div");
+                    for (let i = 0; i < x.length; i++) {
+                        for (i = 0; i < x.length; i++) {
+                            x[i].addEventListener("click", (target) => {
+                                target.path[1].removeChild(target.path[0]);
+                            });
+                        }
+                    }
+                } else if (response.status === 997) {
+                    console.log(response);
+                    var error_m = document.createElement('div');
+                    error_m.classList.add('error_div');
+                    var error_p = document.createTextNode('Sé que estás intentando inyectar scripts. Deja de hacerlo!');
+                    error_m.appendChild(error_p);
+                    document.body.appendChild(error_m);
+                    const x = document.querySelectorAll(".error_div");
+                    for (let i = 0; i < x.length; i++) {
+                        for (i = 0; i < x.length; i++) {
+                            x[i].addEventListener("click", (target) => {
+                                target.path[1].removeChild(target.path[0]);
+                            });
+                        }
+                    }
                 } else {
-                    window.location.assign("/");
+                    //window.location.assign("/");
+                    console.log("fuck!!");
                 }
             })
             .catch(function (err) {
