--- a/src/views/partials/profile_edit_emition.hbs
+++ b/src/views/partials/profile_edit_emition.hbs
@@ -145,7 +145,7 @@
                         console.log(response);
                         var error_m = document.createElement('div');
                         error_m.classList.add('error_div');
-                        var error_p = document.createTextNode('El link de youtube debe ser sólo un fucking link de youtube!');
+                        var error_p = document.createTextNode('Recuerda que la URL debe contener sólo letras, números y usar guiones en vez de espacios');
                         error_m.appendChild(error_p);
                         document.body.appendChild(error_m);
                         const x = document.querySelectorAll(".error_div");
@@ -156,11 +156,26 @@
                                 });
                             }
                         }
-                    } else if (response.status === 999) {
+                    } else if (response.status === 998) {
                         console.log(response);
                         var error_m = document.createElement('div');
                         error_m.classList.add('error_div');
-                        var error_p = document.createTextNode('Recuerda que la URL debe contener sólo letras, números y usar guiones en vez de espacios');
+                        var error_p = document.createTextNode('Recuerda que el Link debe ser del tipo "https://www.youtube.com/watch?v=xxxxxxx"');
+                        error_m.appendChild(error_p);
+                        document.body.appendChild(error_m);
+                        const x = document.querySelectorAll(".error_div");
+                        for (let i = 0; i < x.length; i++) {
+                            for (i = 0; i < x.length; i++) {
+                                x[i].addEventListener("click", (target) => {
+                                    target.path[1].removeChild(target.path[0]);
+                                });
+                            }
+                        }
+                    } else if (response.status === 997) {
+                        console.log(response);
+                        var error_m = document.createElement('div');
+                        error_m.classList.add('error_div');
+                        var error_p = document.createTextNode('Sé que estás intentando inyectar scripts. Deja de hacerlo!');
                         error_m.appendChild(error_p);
                         document.body.appendChild(error_m);
                         const x = document.querySelectorAll(".error_div");
@@ -192,6 +207,36 @@
                         var error_m = document.createElement('div');
                         error_m.classList.add('error_div');
                         var error_p = document.createTextNode('Recuerda que la URL debe contener sólo letras, números y usar guiones en vez de espacios');
+                        error_m.appendChild(error_p);
+                        document.body.appendChild(error_m);
+                        const x = document.querySelectorAll(".error_div");
+                        for (let i = 0; i < x.length; i++) {
+                            for (i = 0; i < x.length; i++) {
+                                x[i].addEventListener("click", (target) => {
+                                    target.path[1].removeChild(target.path[0]);
+                                });
+                            }
+                        }
+                    } else if (response.status === 998) {
+                        console.log(response);
+                        var error_m = document.createElement('div');
+                        error_m.classList.add('error_div');
+                        var error_p = document.createTextNode('Recuerda que el Link debe ser del tipo "https://www.youtube.com/watch?v=xxxxxxx"');
+                        error_m.appendChild(error_p);
+                        document.body.appendChild(error_m);
+                        const x = document.querySelectorAll(".error_div");
+                        for (let i = 0; i < x.length; i++) {
+                            for (i = 0; i < x.length; i++) {
+                                x[i].addEventListener("click", (target) => {
+                                    target.path[1].removeChild(target.path[0]);
+                                });
+                            }
+                        }
+                    } else if (response.status === 997) {
+                        console.log(response);
+                        var error_m = document.createElement('div');
+                        error_m.classList.add('error_div');
+                        var error_p = document.createTextNode('Sé que estás intentando inyectar scripts. Deja de hacerlo!');
                         error_m.appendChild(error_p);
                         document.body.appendChild(error_m);
                         const x = document.querySelectorAll(".error_div");
