--- a/src/views/partials/error_div_style.hbs
+++ b/src/views/partials/error_div_style.hbs
@@ -2,9 +2,18 @@
     .error_div {
         z-index: 99999;
         position: fixed;
+        margin: 2px;
         height: auto;
-        background-color: white;
-        color: red;
+        padding: 3vh;
+        background-color: rgba(255, 41, 41, 0.897);
+        color: rgb(255, 255, 255);
         width: auto;
+        font-weight: bold;
+        font-size: large;
+        cursor: pointer;
+    }
+    .error_div:hover{
+        background-color: red;
+        border:2px solid black;
     }
 </style>
