--- a/src/views/partials/profile_add_new.hbs
+++ b/src/views/partials/profile_add_new.hbs
@@ -1,13 +1,3 @@
-    <style>
-        .error_div {
-            z-index: 99999;
-            position: fixed;
-            height: auto;
-            background-color: white;
-            color: red;
-            width: auto;
-        }
-    </style>
 <div class="dashboard-control">
     <div class="ck-editor-dash">
         <h2 class="Udatos-title">Nueva Noticia</h2>
@@ -187,7 +177,22 @@
                                 target.path[1].removeChild(target.path[0]);
                             });
                         }
-                    } 
+                    }
+                } else if (response.status === 997) {
+                    console.log(response);
+                    var error_m = document.createElement('div');
+                    error_m.classList.add('error_div');
+                    var error_p = document.createTextNode('Sé que estás intentando inyectar scripts. Deja de hacerlo!');
+                    error_m.appendChild(error_p);
+                    document.body.appendChild(error_m);
+                    const x = document.querySelectorAll(".error_div");
+                    for (let i = 0; i < x.length; i++) {
+                        for (i = 0; i < x.length; i++) {
+                            x[i].addEventListener("click", (target) => {
+                                target.path[1].removeChild(target.path[0]);
+                            });
+                        }
+                    }
                 }
                 else {
                     window.location.assign("/");
