--- a/src/public/home-styles.css
+++ b/src/public/home-styles.css
@@ -413,6 +413,7 @@ body {
     flex-flow: row;
     max-height: 20vh;
     max-width: 50vw;
+    background-color: rgba(51, 51, 51, 0.28)
 }
 
 .article-small .custom-headline {
