--- a/src/views/partials/profile_add_emitions.hbs
+++ b/src/views/partials/profile_add_emitions.hbs
@@ -164,7 +164,8 @@
             height: '75vh',
             embed_provider: '//ckeditor.iframe.ly/api/oembed?url={url}&callback={callback}',
             extraPlugins: 'embed,autoembed,image2',
-        });
+            removeButtons: 'Source,Save,Templates,NewPage,Preview,Print,PasteText,Find,Replace,SelectAll,Form,Checkbox,Radio,TextField,Textarea,Select,Button,HiddenField,Subscript,Superscript,CopyFormatting,RemoveFormat,NumberedList,BulletedList,Outdent,Indent,CreateDiv,BidiLtr,BidiRtl,Language,Anchor,Flash,Table,HorizontalRule,SpecialChar,PageBreak,Font,FontSize,TextColor,BGColor,ShowBlocks,About,Styles'
+  });
         const DescriptionEditor = CKEDITOR.replace('description', {
             width: '100%',
             height: '25vh',
