--- a/src/views/contents.hbs
+++ b/src/views/contents.hbs
@@ -10,6 +10,9 @@
     </ul>
 
 </nav>
+<div class="small-header">
+        <div class="img-container"><img src="/LogoBlanco.png" alt=""></div>
+    </div>
 <nav id="main-nav-menu" class="main-nav-menu menu-out">
     <div id="close-button" class="close-button"><span>+</span></div>
     <h2 class="font-crimson">MENU</h2>
@@ -165,7 +168,7 @@
     <div class="aside">
         <div class="auto-container">
             <div class="last-episode">
-                <iframe width="100%" height="200px" src="" frameborder="0"
+                <iframe id="dailySong" width="100%" height="200px" src="" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
