--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,3 +1,5 @@
+<div class="small-header">
+</div>
 <nav class="main-nav">
     <a href="/" class="logo-container"> <img src="/LogoBlanco.png" class="nav-logo" alt="">
     </a>
@@ -272,8 +274,8 @@
         {{#if emitions}}
         <div class="article-big">
             <div class="emition-image-container">
-                <a href="/contents/emitions/{{emitions.[0].url}}"><img src="{{emitions.[0].thumbnail}}" class="emition-img"
-                        alt=""></a>
+                <a href="/contents/emitions/{{emitions.[0].url}}"><img src="{{emitions.[0].thumbnail}}"
+                        class="emition-img" alt=""></a>
             </div>
             <div class="info">
                 <span class="custom-headline font-white">{{emitions.[0].date}}</span>
@@ -287,8 +289,8 @@
 
         <div class="article-small">
             <div class="emition-image-container">
-                <a href="/contents/emitions/{{emitions.[1].url}}"><img src="{{emitions.[1].thumbnail}}" class="emition-img"
-                        alt=""></a>
+                <a href="/contents/emitions/{{emitions.[1].url}}"><img src="{{emitions.[1].thumbnail}}"
+                        class="emition-img" alt=""></a>
             </div>
             <div class="info">
                 <span class="custom-author font-white">{{emitions.[1].date}}</span>
@@ -302,8 +304,8 @@
         </div>
         <div class="article-small">
             <div class="emition-image-container">
-                <a href="/contents/emitions/{{emitions.[2].url}}"><img src="{{emitions.[2].thumbnail}}" class="emition-img"
-                        alt=""></a>
+                <a href="/contents/emitions/{{emitions.[2].url}}"><img src="{{emitions.[2].thumbnail}}"
+                        class="emition-img" alt=""></a>
             </div>
             <div class="info">
                 <span class="custom-author font-white">{{emitions.[2].date}}</span>
@@ -317,8 +319,8 @@
         </div>
         <div class="article-small">
             <div class="emition-image-container">
-                <a href="/contents/emitions/{{emitions.[3].url}}"><img src="{{emitions.[3].thumbnail}}" class="emition-img"
-                        alt=""></a>
+                <a href="/contents/emitions/{{emitions.[3].url}}"><img src="{{emitions.[3].thumbnail}}"
+                        class="emition-img" alt=""></a>
             </div>
             <div class="info">
                 <span class="custom-author font-white">{{emitions.[3].date}}</span>
@@ -332,8 +334,8 @@
         </div>
         <div class="article-small">
             <div class="emition-image-container">
-                <a href="/contents/emitions/{{emitions.[4].url}}"><img src="{{emitions.[4].thumbnail}}" class="emition-img"
-                        alt=""></a>
+                <a href="/contents/emitions/{{emitions.[4].url}}"><img src="{{emitions.[4].thumbnail}}"
+                        class="emition-img" alt=""></a>
             </div>
             <div class="info">
                 <span class="custom-author font-white">{{emitions.[4].date}}</span>
