--- a/src/public/home-styles.css
+++ b/src/public/home-styles.css
@@ -38,14 +38,14 @@ body {
 .custom-big-title {
     display: block;
     font-size: 180%;
-    margin: 3% 0;
+    margin: 0% 0% 10% 0%;
 }
 
 .custom-medium-title {
     display: block;
     font-size: 170%;
     font-weight: 400;
-    margin: 2% 0;
+    margin: 0% 0% 5% 0;
 }
 
 .custom-small-title {
@@ -65,6 +65,10 @@ body {
     font-size: 75%;
     font-weight: bold;
     font-family: 'Lato', sans-serif;
+}
+
+.small-header{
+    display:none;
 }
 
 .main-nav {
@@ -244,7 +248,6 @@ body {
     width: auto;
 }
 
-/*.news .title, */
 
 .columns-and-news-container .title, .emitions .title {
     padding-bottom: 0.5%;
@@ -262,7 +265,7 @@ body {
 }
 
 .news .custom-small-title {
-    margin-bottom: 6%;
+    margin-bottom: 15%;
 }
 
 .news .display-medium p {
@@ -676,6 +679,18 @@ body {
 }
 
 @media screen and (max-width: 765px) {
+    .small-header {
+        background-image: url(/img/small-header.JPG);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position-x: -80vw;
+        width: 100%;
+        height: 15vh;
+        z-index: 99;
+        position: relative;
+        align-items: center;
+        display: flex;
+    }
     .hero {
         display: none
     }
@@ -807,13 +822,11 @@ body {
         display: flex;
         flex-flow: column;
     }
-
-    .article-small{
+    .article-small {
         max-height: unset;
         max-width: unset;
     }
-
-    .article-small .clamp{
+    .article-small .clamp {
         max-height: unset;
         max-width: unset;
     }
